Fixed nav bar and footer issues (not stretching across screen)

--- a/frontend/web-pages/src/app/globals.css
+++ b/frontend/web-pages/src/app/globals.css
@@ -5,8 +5,6 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  padding-right: 10rem;
-  padding-left: 10rem
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,6 +23,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .nav {
